Fix horizontal overflow

--- a/docs/_scss/modules/_nav.scss
+++ b/docs/_scss/modules/_nav.scss
@@ -6,7 +6,7 @@
         top: 1rem;
         left: 50%;
         transform: translateX(-50%);
-        width: 100vw;
+        width: 100%;
         background: transparent;
     }
 }
